# cpu_observer

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: cpu_load_calculator.h  cpu_reader.h  shared_data.h  ui_manager.h
lib/src/: cpu_load_calculator.cpp  cpu_reader.cpp  ui_manager.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_reader.cpp
